src/test/testFiles/invalid/semanticErrors/nestedForLoopRedeclarationOfVariables.manimdsl
let x = 0;
for (i in range(1, 3)) {
    let y = 1;
    for (i in range(2, 4)) {
        let y = 2;
        x = i * i;
    }
}